# digit_wisdom_sutra

./: readme.md  全名大寫經需求規格說明書 - 備份.docx  全名大寫經需求規格說明書.docx
national-sutra-project/: .gitignore  docker-compose.yml
national-sutra-project/backend-api-go/: go.mod
national-sutra-project/backend-worker-python/: README.md  py-env.bat  pyproject.toml
national-sutra-project/backend-worker-python/app/: main.py
national-sutra-project/docs/: keep.txt
national-sutra-project/frontend/: package-lock.json  package.json
national-sutra-project/frontend/src/: App.jsx
