[tool.poetry]
name = "backend-worker-python"
version = "0.1.0"
description = "全民大寫經 - 專責處理 AI 圖像/語音審核與 FFmpeg 影音無縫合併的背景任務"
authors = ["National Sutra Team <wrbusiness@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
celery = "^5.3.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"